--- a/web_display/index.html
+++ b/web_display/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/bra/css/bootstrap.min.css" type="text/css"  />
 
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Exposition</title>
+  <title>taobao_bra_crawler</title>
   <script type="text/javascript" src="js/jquery-1.12.3.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script src="js/echarts.min.js"></script>
