--- a/web_display/index.html
+++ b/web_display/index.html
@@ -19,7 +19,7 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body class="linear">
+<body class="linear" onmousewheel="return false;">
   <div id="main">
     <div id="basic" ></div>
     <div id="color" ></div>
