--- a/web_display/index.html
+++ b/web_display/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="/bra/css/bootstrap.min.css" type="text/css"  />
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"  />
 
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>taobao_bra_crawler</title>
+  <title>淘宝文胸销量分析</title>
   <script type="text/javascript" src="js/jquery-1.12.3.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script src="js/echarts.min.js"></script>
@@ -27,7 +27,7 @@
   </div>
   <nav>
     <ul class="pager">
-      <li class="previous">
+      <li class="previous" onmouseup="$('.previous').blur()">
         <a href="#">
           <span class="glyphicon glyphicon-arrow-left
 " aria-hidden="true" style="font-size: 22px"></span>
