--- a/data_visualization/index.html
+++ b/data_visualization/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="short icon" href="static/favicon.ico">
-        <link rel="stylesheet" href="static/css/style.css" type="text/css" media="screen" />
+        <!-- <link rel="stylesheet" href="static/css/style.css" type="text/css" media="screen" /> -->
         <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css"  />
         <script type="text/javascript" src="static/js/jquery-1.12.3.min.js"></script>
         <script src="static/js/echarts.min.js"></script>
